--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,19 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    commit-message:
+      prefix: fix(MY-APP): My custom pr title siema
   - package-ecosystem: npm
     directory: "/javascript"
     schedule:
       interval: "weekly"
+    commit-message:
+      prefix: fix(MY-APP): My custom pr title siema
+
   - package-ecosystem: bundler
     directory: "/ruby"
     schedule:
       interval: "weekly"
+    commit-message:
+      prefix: fix(MY-APP): My custom pr title siema
+
